syntax = "proto3";

// namespace
package remoteps;

// RemotePs service definition.
service RemotePs {

	// test the connection between client and server
	rpc connectionTest (Message) returns (Message) {}

	// extract the list of all current running procs on server machine
	rpc listOfProcs (Process) returns (stream Process) {}

	// extract information of processes with given name
	rpc procByCmd (Process) returns (stream Process) {}
}


message Message {
	string msg = 1;
}

// general information message of a process
message Process {
	string  cmd = 1;		// basename of executable file in vall to exec 
	uint32  pid = 2;		// task id, the POSIX thread ID
	uint32  ppid = 3;		// pid of parent process
	repeated string cmdline = 4;	// command line string vector (/proc/#/cmdline)
	repeated string environ = 5;	// environment string vector (/proc/#/environ)
}
